--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,8 @@
     html, body {
       margin: 0;
       padding: 0;
+      font-family: sans-serif;
+      font-size: 12px;
     }
     body {
       overflow: hidden;
