--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,14 @@
     body {
       overflow: hidden;
     }
+    button {
+      background-color: white;
+      outline: none;
+    }
+    .recording {
+      background-color: red;
+      color: white;
+    }
   </style>
   <script src="libraries/p5.min.js"></script>
   <script src="libraries/p5.dom.min.js"></script>
