p5 loaded from CDN

--- a/public/index.html
+++ b/public/index.html
@@ -1,33 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>boilerplate</title>
-  <style>
-    html, body {
-      margin: 0;
-      padding: 0;
-      font-family: sans-serif;
-      font-size: 12px;
-    }
-    body {
-      overflow: hidden;
-    }
-    button {
-      background-color: white;
-      outline: none;
-    }
-    .recording {
-      background-color: red;
-      color: white;
-    }
-  </style>
-  <script src="libraries/p5.min.js"></script>
-  <script src="sketch.js"></script>
-</head>
-<body>
-
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>boilerplate</title>
+    <style>
+      html,
+      body {
+        margin: 0;
+        padding: 0;
+        font-family: sans-serif;
+        font-size: 12px;
+      }
+      body {
+        overflow: hidden;
+      }
+      button {
+        background-color: white;
+        outline: none;
+      }
+      .recording {
+        background-color: red;
+        color: white;
+      }
+    </style>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.5.0/p5.min.js"></script>
+    <script src="sketch.js"></script>
+  </head>
+  <body></body>
 </html>
